--- a/reverse-string/index.html
+++ b/reverse-string/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reverse String</title>    
+    <title>reverse-string</title>
 </head>
 <body>
-<script src="script.js"></script>
+    <h1>Reverse String</h1>
+    <input type="text" id="inputText">
+    <button onclick="reverseString()">Reverse</button>
+    <h2 id="outputText"></h2>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
